clusters/homelab/apps/ext-mastodon/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ext-mastodon
  labels:
    gateway.infra.services/allow-routes: "true"
