clusters/homelab/apps/ext-mastodon/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mastodon
  namespace: ext-mastodon
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames:
    - "mastodon.klimlive.de"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/v1/streaming
      backendRefs:
        - kind: Service
          name: mastodon-streaming
          port: 4000
    - backendRefs:
        - kind: Service
          name: mastodon-web
          port: 3000
